# parallel_systems

./: README.md
handin-skeleton/: run_tests.py
handin-skeleton/src/: helpers.cpp  prefix_sum.cpp  spin_barrier.h
handin-skeleton/tests/: 1k.txt  8k.txt
lab1/Lab1Report/: lab1.tex
lab1/lab1_prefix_sum/handin-skeleton/: temp.txt
lab2/KMeans_Project/: Makefile  run_test.py  submit
lab2/KMeans_Project/src/: atomic_utils.h  distance.hpp  kmeans.cpp  kmeans.h  kmeans_cpu.cpp  kmeans_cuda.cu  kmeans_gmem.cu  kmeans_kernel.cu  kmeans_shmem.cu  kmeans_thrust.cu  main.cpp
lab2/KMeans_Project/tests/: random-n16384-d24-c16-answer.txt  random-n2048-d16-c16-answer.txt  random-n65536-d32-c16-answer.txt  test50-d2-k3.txt.pyanswer
lab2/Lab2Report/: Lab2.tex  run_tests.py
lab2/data_test/answers/: random-n1-d1-c1-answer-gmem-t1e-5.txt  random-n1-d1-c1-answer-labels-gmem-t1e-5.txt  random-n1-d1-c1-answer-labels-seq-t1e-5.txt  (+916 more)
lab3/: Makefile  bst-equivalence  experiment_results.csv  experiment_results_coarse.csv  experiment_results_fine.csv  experiment_results_simple.csv  go.mod  myprogram  run_experiments.sh
lab3/cmd/: main.go
lab3/expected/: coarse_expected_output.txt  fine_expected_output.txt  simple_expected_output.txt
lab3/lab3Report/: lab3Rep.tex
lab3/output/: coarse_output.txt  fine_output.txt  simple_output.txt
lab3/pkg/bst/: bst.go
lab4/: skeleton-2pc-process.tar
lab4/skeleton_2pc/: .gitignore  Cargo.toml  sample.txt
lab4/skeleton_2pc/src/: checker.rs  client.rs  coordinator.rs  ftlog.rs  main.rs  message.rs  oplog.rs  participant.rs  tpcoptions.rs
(+93 files in other folders)
