[package]
name = "skeleton_2pc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
atomic-counter = "1.0.1"
ctrlc = "3.1.3"
rand = "0.7.0"
serde_json = "1.0.40"
log = "0.4.8"
stderrlog = "0.4.1"
shellexpand = "1.1.1"
ipc-channel = "0.16"
